--- a/Shared/global.scss
+++ b/Shared/global.scss
@@ -13,7 +13,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         padding: 20px;
-        background-color: black;
+        background-color: beige;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         text-align: center;
     }
