--- a/Shared/global.css
+++ b/Shared/global.css
@@ -78,3 +78,39 @@ span.error {
   z-index: 10;
   margin-left: 10px; /* Space between the input and tooltip */
 }
+
+/* Styles for the dialog's outer container */
+.ui-dialog {
+  border-radius: 8px;
+  box-shadow: 0px 0px 20px #000;
+}
+
+/* Styling the dialog's title bar */
+.ui-dialog-titlebar {
+  background-color: #f2f2f2;
+  color: #555;
+  border-radius: 7px 7px 0 0; /* top-left, top-right, bottom-right, bottom-left */
+}
+
+/* Styling the dialog's main content area */
+.ui-dialog-content {
+  font-size: 16px;
+  color: #333;
+}
+
+/* Styling the dialog's buttons */
+.ui-dialog-buttonpane .ui-button {
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.ui-dialog-buttonpane .ui-button:hover {
+  background-color: #0056b3;
+}
+
+
