--- a/Shared/global.css
+++ b/Shared/global.css
@@ -1,3 +1,8 @@
+.ui-btn-icon-left:after, .ui-btn-icon-right:after, .ui-btn-icon-top:after, .ui-btn-icon-bottom:after, .ui-btn-icon-notext:after {
+  color: orange !important;
+  background-color: orange !important;
+}
+
 .popup {
   display: none;
   position: fixed;
